Splitting ORM and core modules